Renames misc file and fixed header alignment

--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ html{
 body{
 color:var(--dark);
 }
+header{
+    text-align: center;
+}
 ul{
     list-style: circle;
 }
